# rabbitmq-helloworld

./: .env_example  .gitignore  .pre-commit-config.yaml  .secrets.toml  Dockerfile-consumer..localhost  Dockerfile-producer.localhost  README.md  consumer.py  init_config.sh  producer.py  pyproject.toml  requirements.txt  run_geracao_eolica_dev.sh  settings.local.toml  settings.toml  update_env.sh  update_secrets.sh
docker/02-rabbitmq-traefik/: 02-docker-compose-rabbitmq.yml
docker/03-consumer/: 03-docker-compose-consumer.yml
docker/05-rabbitmq-only/: 05-docker-compose-rabbitmq.yml
